<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/logo_trans" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/cat1"
                android:background="@color/colorCat"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true">
                <TextView
                    android:gravity="center|left"
                    android:text="@string/catPop"
                    android:drawableTop="@drawable/ic_stars_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/cat2"
                android:background="@color/colorCat"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true">
                <TextView
                    android:gravity="center|left"
                    android:text="@string/catMath"
                    android:drawableTop="@drawable/ic_font_download_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/cat3"
                    android:background="@color/colorCat"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true">
                    <TextView
                        android:gravity="center|left"
                        android:text="@string/catIt"
                        android:drawableTop="@drawable/ic_stars_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/cat4"
                    android:background="@color/colorCat"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true">
                    <TextView
                        android:gravity="center|left"
                        android:text="@string/catLt"
                        android:drawableTop="@drawable/ic_font_download_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/cat5"
                    android:background="@color/colorCat"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true">
                    <TextView
                        android:gravity="center|left"
                        android:text="@string/catEn"
                        android:drawableTop="@drawable/ic_stars_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/cat6"
                    android:background="@color/colorCat"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true">
                    <TextView
                        android:gravity="center|left"
                        android:text="@string/catFz"
                        android:drawableTop="@drawable/ic_font_download_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/cat7"
                    android:background="@color/colorCat"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true">
                    <TextView
                        android:gravity="center|left"
                        android:text="@string/catCh"
                        android:drawableTop="@drawable/ic_stars_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/cat8"
                    android:background="@color/colorCat"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true">
                    <TextView
                        android:gravity="center|left"
                        android:text="empty"
                        android:drawableTop="@drawable/ic_font_download_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>